Redo object loading

--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Onyx\Model\Model.cpp" />
     <ClCompile Include="src\Onyx\Editor\Editor.cpp" />
     <ClCompile Include="src\Onyx\Audio\Sound.cpp" />
     <ClCompile Include="src\Onyx\Audio\SoundManager.cpp" />
@@ -41,6 +42,7 @@
     <ClCompile Include="src\Onyx\Graphics\Texture.cpp" />
     <ClCompile Include="src\Onyx\graphics\VertexArray.cpp" />
     <ClCompile Include="src\Onyx\ImGUI\ImGuiBuild.cpp" />
+    <ClCompile Include="src\Onyx\Model\ModelLoader.cpp" />
     <ClCompile Include="src\Onyx\Physics\Physics.cpp" />
     <ClCompile Include="src\Onyx\Scene\Scene.cpp" />
     <ClCompile Include="src\Platform\OpenAL\OpenALDevice.cpp" />
@@ -68,9 +70,11 @@
     <ClCompile Include="src\Platform\Vulkan\VulkanSwapchain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Onyx\Model\Model.h" />
     <ClInclude Include="src\Onyx\Editor\Editor.h" />
     <ClInclude Include="src\Onyx\Entity\Entity.h" />
     <ClInclude Include="src\Onyx\Entity\Registry.h" />
+    <ClInclude Include="src\Onyx\Model\ModelLoader.h" />
     <ClInclude Include="src\Onyx\OnyxEditor.h" />
     <ClInclude Include="src\Onyx\Physics\Ray.h" />
     <ClInclude Include="src\Onyx\Physics\Physics.h" />
@@ -242,7 +246,7 @@
     </Link>
     <PostBuildEvent>
       <Message>copy output binaries and linker scripts to the sandbox directory</Message>
-      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.pdb" /Y</Command>
+      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.dll" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.lib" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.pdb" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -285,7 +289,7 @@
     </Link>
     <PostBuildEvent>
       <Message>copy output binaries and linker scripts to the sandbox directory</Message>
-      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.dll" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.lib" /Y &amp;&amp;xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET-Test\$(Configuration)\onyx.pdb" /Y</Command>
+      <Command>xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.lib" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\onyx-sandbox\$(Configuration)\onyx.pdb" /Y &amp;&amp;  xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.dll" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.lib" /Y &amp;&amp;   xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor\$(Configuration)\onyx.pdb" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.dll" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.lib" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-CLR\$(Configuration)\onyx.pdb" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.dll" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.dll" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.lib" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.lib" /Y &amp;&amp; xcopy "$(SolutionDir)bin\onyx\$(Configuration)\onyx.pdb" "$(SolutionDir)bin\Onyx-Editor-NET\$(Configuration)\onyx.pdb" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
