--- a/Onyx-Editor-NET/Onyx-Editor-NET.csproj
+++ b/Onyx-Editor-NET/Onyx-Editor-NET.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -70,6 +71,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="src\Onyx-Editor-NET\Input\Input.cs" />
+    <Compile Include="src\Onyx-Editor-NET\Input\Keycodes.cs" />
     <Compile Include="src\Onyx-Editor-NET\UI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
