--- a/Onyx-CLR/Onyx-CLR.vcxproj.filters
+++ b/Onyx-CLR/Onyx-CLR.vcxproj.filters
@@ -4,13 +4,13 @@
     <ClCompile Include="src\pch.cpp" />
     <ClCompile Include="src\AssemblyInfo.cpp" />
     <ClCompile Include="src\Onyx-CLR.cpp" />
-    <ClCompile Include="src\Editor\EditorWrapper.cpp" />
     <ClCompile Include="src\Editor\EditorInput.cpp" />
+    <ClCompile Include="src\Editor\Editor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\Onyx-CLR.h" />
-    <ClInclude Include="src\Editor\EditorWrapper.h" />
     <ClInclude Include="src\Editor\EditorInput.h" />
+    <ClInclude Include="src\Editor\Editor.h" />
   </ItemGroup>
 </Project>
