Added skybox and cube mapping fixed bugs in camera controllers and renderer

--- a/Onyx-Sandbox/onyx-sandbox.vcxproj.filters
+++ b/Onyx-Sandbox/onyx-sandbox.vcxproj.filters
@@ -33,6 +33,7 @@
     <None Include="res\shaders\FlatColor.glsl" />
     <None Include="res\shaders\Texture.glsl" />
     <None Include="res\models\CubeTri.fbx" />
+    <None Include="res\shaders\Skybox.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Sandbox2D.h">
