--- a/Onyx-Sandbox/onyx-sandbox.vcxproj
+++ b/Onyx-Sandbox/onyx-sandbox.vcxproj
@@ -163,6 +163,7 @@
     <None Include="res\shaders\3DTest.glsl" />
     <None Include="res\shaders\2DQuad.glsl" />
     <None Include="res\shaders\FlatColor.glsl" />
+    <None Include="res\shaders\Skybox.glsl" />
     <None Include="res\shaders\Texture.glsl" />
     <None Include="res\shaders\vulkantest\compile.bat" />
     <None Include="res\shaders\vulkantest\glslc.exe" />
