--- a/Onyx-CLR/Onyx-CLR.vcxproj
+++ b/Onyx-CLR/Onyx-CLR.vcxproj
@@ -140,13 +140,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Editor\EditorInput.h" />
+    <ClInclude Include="src\Bitmap\BitmapDirect.h" />
     <ClInclude Include="src\Editor\Editor.h" />
     <ClInclude Include="src\Onyx-CLR.h" />
     <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\Engine\Vector.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Editor\EditorInput.cpp" />
+    <ClCompile Include="src\Bitmap\BitmapDirect.cpp" />
     <ClCompile Include="src\Editor\Editor.cpp" />
     <ClCompile Include="src\AssemblyInfo.cpp" />
     <ClCompile Include="src\Onyx-CLR.cpp" />
