--- a/Onyx-Editor-NET/Onyx-Editor-NET.csproj
+++ b/Onyx-Editor-NET/Onyx-Editor-NET.csproj
@@ -25,6 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Onyx_Editor_NET.App</StartupObject>
@@ -63,6 +65,7 @@
     </ApplicationDefinition>
     <Compile Include="src\Onyx-Editor-NET\Debug\Console.cs" />
     <Compile Include="src\Onyx-Editor-NET\Engine\OnyxEditor.cs" />
+    <Compile Include="src\Onyx-Editor-NET\Input\MouseCodes.cs" />
     <Compile Include="src\Onyx-Editor-NET\Viewport\BitmapDirect.cs" />
     <Page Include="src\Onyx-Editor-NET\Viewport\Viewport.xaml">
       <SubType>Designer</SubType>
@@ -117,6 +120,12 @@
       <Project>{3b32cd22-5be2-43dd-aa4f-48299f0e1134}</Project>
       <Name>Onyx-CLR</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="res\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="src\Onyx-Editor-NET\Viewport\viewport_splash.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
